--- a/src-curriculum.html
+++ b/src-curriculum.html
@@ -164,29 +164,39 @@
                     <td>Intro</td>
                   </tr>
                   <tr>
-                    <th scope="row"> </th>
-                    <td> </td>
+                    <th scope="row">1.b </th>
+                    <td>Understand and articulate value and functions of privacy (including short term and long-term privacy threats) </td>
                     <td>Intro</td>
                   </tr>
                   <tr>
-                    <th scope="row"> </th>
-                    <td> </td>
+                    <th scope="row">1.c </th>
+                    <td>Be familiar and be able to apply key aspects of major privacy regulations (e.g., CCPA, GDPR, ...) </td>
+                    <td>Intermediate, 1000-level</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">1.d </th>
+                    <td>Recognize instances of data collection which enable surveillance and sousveillance (inverse/lateral) surveillance </td>
+                    <td>Intermediate, 1000-level</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">1.e </th>
+                    <td>Be able to reason about tradeoffs between privacy and other goods, such as transparency, accountability, safety, or security </td>
+                    <td>1000-level</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">1.f </th>
+                    <td>Understand different conceptions of consent, their potential and limitations as an instrument for data protection </td>
                     <td>Intro</td>
                   </tr>
                   <tr>
-                    <th scope="row"> </th>
-                    <td> </td>
-                    <td>Intro</td>
+                    <th scope="row">1.g.i </th>
+                    <td>Be familiar with widely-used encryption technologies (e.g., public key encryption) and key principles of how they work work </td>
+                    <td>Intermediate, 1000-level</td>
                   </tr>
                   <tr>
-                    <th scope="row"> </th>
-                    <td> </td>
-                    <td>Intro</td>
-                  </tr>
-                  <tr>
-                    <th scope="row"> </th>
-                    <td> </td>
-                    <td>Intro</td>
+                    <th scope="row">1.g.ii </th>
+                    <td>Be able to articulate and engage with prominent controversies surrounding encryption </td>
+                    <td>1000-level</td>
                   </tr>
                 </tbody>
               </table></div>
@@ -196,22 +206,91 @@
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingTwo">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                How many hours do STAs work?
+                2. Data and AI: accuracy, fairness, justice
               </button>
             </h2>
             <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+              <div class="accordion-body"><table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col" style="width: 5%"></th>
+                    <th scope="col" style="width: 80%">Students should ...</th>
+                    <th scope="col" style="width: 15%">Course level</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">2.a.i</th>
+                    <td>Understand that representing aspects of the world through data is necessarily reductive and incomplete and that developer perspective shapes the choice and design of variables</td>
+                    <td>Intro</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2.a.ii</th>
+                    <td>Be able to point out variables in datasets which emphasize a particular perspective and identify possible effects of redesigning them</td>
+                    <td>Intro, Intermediate</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2.b </th>
+                    <td>Understand different sources of bias in algorithmic and AI systems (societal vs. dataset vs. system parameters) and their interactions </td>
+                    <td>Intro, Intermediate</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2.c.i </th>
+                    <td>Understand and articulate formal-statistical and substantive conceptions of fairness and justice and understand how they may diverge</td>
+                    <td>Intermediate, 1000-level</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2.c.ii </th>
+                    <td>Make nuanced judgments on tradeoffs between different (formal and substantive) conceptions of algorithmic justice </td>
+                    <td>1000-level</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2.d </th>
+                    <td>Recognise context-specific limitations of algorithmic and AI decision making and judge when the use of such systems is appropriate and when human decision-making is preferable or required  </td>
+                    <td>1000-level</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2.e </th>
+                    <td>Understand and assess different standards for understanding algorithmic and AI decisions: e.g., transparency, explainability</td>
+                    <td>Intermediate, 1000-level</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2.f </th>
+                    <td>Engage with public-interest-focused applications of AI
+                    </td>
+                    <td>Intro, Intermediate, 1000-level</td>
+                  </tr>
+                </tbody>
+              </table></div> 
+
             </div>
           </div>
 
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingThree">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                How much do STAs get paid?
+                3. Communication and public discourse
               </button>
             </h2>
             <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+              <div class="accordion-body">
+                <div class="accordion-body"><table class="table">
+                  <thead>
+                    <tr>
+                      <th scope="col" style="width: 5%"></th>
+                      <th scope="col" style="width: 80%">Students should ...</th>
+                      <th scope="col" style="width: 15%">Course level</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row">3.a</th>
+                      <td>Understand and articulate tensions between social pluralism and freedom of expression and user safety and comfort in content moderation </td>
+                      <td>Intermediate, 1000-level</td>
+                    </tr>
+                  </tbody>
+                </table></div> 
+              </div>
             </div>
           </div>
 
